k8s/apps/networking/external-services/hyperhdr.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name hyperhdr
  namespace: networking
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8090
      protocol: TCP
      targetPort: 8090
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: hyperhdr
  namespace: networking
  labels:
    kubernetes.io/service-name: hyperhdr
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.5
ports:
  - name: http
    protocol: TCP
    port: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name hyperhdr
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "HyperHDR"
    hajimari.io/icon: mdi:hdr
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host hyperhdr.k8sj.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *name
                port:
                  number: 8090
  tls:
    - hosts:
        - *host
