k8s/apps/networking/external-services/yamaha.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yamaha
  namespace: networking
  labels:
    app.kubernetes.io/name: yamaha
    app.kubernetes.io/instance: yamaha
spec:
  type: ExternalName
  externalName: yamaha.dom.lan
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yamaha
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "Yamaha"
    hajimari.io/icon: mdi:multimedia
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
  labels:
    app.kubernetes.io/name: yamaha
    app.kubernetes.io/instance: yamaha
spec:
  ingressClassName: nginx
  rules:
    - host: &host yamaha.k8sj.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yamaha
                port:
                  number: 80
  tls:
    - hosts:
        - *host
